--- a/Data Preprocessing.ipynb
+++ b/Data Preprocessing.ipynb
@@ -8,7 +8,7 @@
    "source": [
     "import os\n",
     "\n",
-    "dataset_dir = './data/all'  # Set the dataset directory\n",
+    "dataset_dir = './data/clean'  # Set the dataset directory\n",
     "train_dir = './data/train'\n",
     "val_dir = './data/val'\n",
     "\n",
