--- a/Data Analysis.ipynb
+++ b/Data Analysis.ipynb
@@ -134,8 +134,10 @@
     "    else:\n",
     "        word_dict['isnull'] += 1\n",
     "\n",
+    "word_key = []\n",
     "y = []\n",
     "for (key, value) in word_dict.items():\n",
+    "    word_key.append(key)\n",
     "    y.append(value)"
    ]
   },
@@ -196,6 +198,196 @@
     "print(f'Average except isnull: {np.average(y[:-2])}')\n",
     "print(f'Standard: {np.std(y)}')\n",
     "print(f'Standard except isnull: {np.std(y[:-2])}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of words have less than 60 images: 151\n",
+      "Number of words have less than 80 images: 264\n",
+      "Number of Words have less than 90 images: 377\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f'Number of words have less than 60 images: {np.count_nonzero(np.array(y) < 60)}')\n",
+    "print(f'Number of words have less than 80 images: {np.count_nonzero(np.array(y) < 80)}')\n",
+    "print(f'Number of Words have less than 90 images: {np.count_nonzero(np.array(y) < 90)}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "仙 have only 17 images\n",
+      "圖 have only 18 images\n",
+      "迅 have only 18 images\n",
+      "鑽 have only 19 images\n",
+      "勁 have only 20 images\n",
+      "班 have only 20 images\n",
+      "央 have only 21 images\n",
+      "衣 have only 21 images\n",
+      "買 have only 21 images\n",
+      "首 have only 21 images\n",
+      "匠 have only 22 images\n",
+      "厚 have only 22 images\n",
+      "籌 have only 22 images\n",
+      "燿 have only 23 images\n",
+      "應 have only 24 images\n",
+      "池 have only 24 images\n",
+      "腦 have only 24 images\n",
+      "苗 have only 24 images\n",
+      "賜 have only 25 images\n",
+      "沙 have only 26 images\n",
+      "磊 have only 26 images\n",
+      "覽 have only 26 images\n",
+      "姚 have only 27 images\n",
+      "復 have only 27 images\n",
+      "燦 have only 27 images\n",
+      "紋 have only 27 images\n",
+      "色 have only 27 images\n",
+      "鎧 have only 27 images\n",
+      "愷 have only 28 images\n",
+      "絲 have only 28 images\n",
+      "卉 have only 29 images\n",
+      "希 have only 29 images\n",
+      "炳 have only 29 images\n",
+      "紹 have only 29 images\n",
+      "常 have only 31 images\n",
+      "僑 have only 32 images\n",
+      "念 have only 33 images\n",
+      "助 have only 34 images\n",
+      "堡 have only 34 images\n",
+      "竑 have only 34 images\n",
+      "織 have only 35 images\n",
+      "期 have only 36 images\n",
+      "煒 have only 36 images\n",
+      "鈦 have only 36 images\n",
+      "女 have only 37 images\n",
+      "淨 have only 37 images\n",
+      "衛 have only 37 images\n",
+      "妹 have only 38 images\n",
+      "主 have only 39 images\n",
+      "培 have only 39 images\n",
+      "守 have only 39 images\n",
+      "帝 have only 39 images\n",
+      "拓 have only 39 images\n",
+      "語 have only 39 images\n",
+      "郎 have only 39 images\n",
+      "集 have only 39 images\n",
+      "顯 have only 39 images\n",
+      "總 have only 40 images\n",
+      "職 have only 40 images\n",
+      "伍 have only 41 images\n",
+      "巫 have only 41 images\n",
+      "綸 have only 41 images\n",
+      "葳 have only 41 images\n",
+      "託 have only 41 images\n",
+      "賓 have only 41 images\n",
+      "酒 have only 42 images\n",
+      "鋁 have only 42 images\n",
+      "閎 have only 42 images\n",
+      "其 have only 43 images\n",
+      "匯 have only 43 images\n",
+      "敦 have only 43 images\n",
+      "神 have only 43 images\n",
+      "若 have only 43 images\n",
+      "凌 have only 44 images\n",
+      "拉 have only 44 images\n",
+      "澄 have only 44 images\n",
+      "芝 have only 44 images\n",
+      "鐘 have only 44 images\n",
+      "祺 have only 45 images\n",
+      "蔣 have only 45 images\n",
+      "處 have only 45 images\n",
+      "頂 have only 45 images\n",
+      "昆 have only 46 images\n",
+      "榕 have only 46 images\n",
+      "侑 have only 47 images\n",
+      "嬌 have only 47 images\n",
+      "房 have only 47 images\n",
+      "皓 have only 47 images\n",
+      "芷 have only 47 images\n",
+      "申 have only 48 images\n",
+      "竣 have only 48 images\n",
+      "董 have only 48 images\n",
+      "賀 have only 48 images\n",
+      "閔 have only 48 images\n",
+      "吟 have only 49 images\n",
+      "堅 have only 49 images\n",
+      "彰 have only 49 images\n",
+      "琇 have only 49 images\n",
+      "球 have only 50 images\n",
+      "秦 have only 50 images\n",
+      "貝 have only 50 images\n",
+      "部 have only 50 images\n",
+      "誼 have only 51 images\n",
+      "先 have only 52 images\n",
+      "津 have only 52 images\n",
+      "紅 have only 52 images\n",
+      "舒 have only 52 images\n",
+      "伯 have only 53 images\n",
+      "堯 have only 53 images\n",
+      "婕 have only 53 images\n",
+      "彬 have only 53 images\n",
+      "潤 have only 53 images\n",
+      "策 have only 53 images\n",
+      "馮 have only 53 images\n",
+      "敬 have only 54 images\n",
+      "聲 have only 54 images\n",
+      "言 have only 54 images\n",
+      "詩 have only 54 images\n",
+      "雨 have only 54 images\n",
+      "伊 have only 55 images\n",
+      "妮 have only 55 images\n",
+      "橋 have only 55 images\n",
+      "添 have only 55 images\n",
+      "玫 have only 55 images\n",
+      "男 have only 55 images\n",
+      "視 have only 55 images\n",
+      "鏡 have only 55 images\n",
+      "齊 have only 55 images\n",
+      "亨 have only 56 images\n",
+      "場 have only 56 images\n",
+      "宣 have only 56 images\n",
+      "款 have only 56 images\n",
+      "毓 have only 56 images\n",
+      "致 have only 56 images\n",
+      "飾 have only 56 images\n",
+      "本 have only 57 images\n",
+      "璃 have only 57 images\n",
+      "療 have only 57 images\n",
+      "谷 have only 57 images\n",
+      "道 have only 57 images\n",
+      "韻 have only 57 images\n",
+      "黎 have only 57 images\n",
+      "音 have only 58 images\n",
+      "倉 have only 59 images\n",
+      "恆 have only 59 images\n",
+      "漁 have only 59 images\n",
+      "玻 have only 59 images\n",
+      "系 have only 59 images\n",
+      "紘 have only 59 images\n",
+      "迪 have only 59 images\n",
+      "麒 have only 59 images\n"
+     ]
+    }
+   ],
+   "source": [
+    "for img_num, word in sorted(zip(y, word_key)):\n",
+    "    if img_num < 60:\n",
+    "        print(f'{word} have only {img_num} images')"
    ]
   },
   {
