--- a/Data Preprocessing.ipynb
+++ b/Data Preprocessing.ipynb
@@ -38,7 +38,7 @@
     "os.mkdir(os.path.join(train_dir, 'isnull'))\n",
     "os.mkdir(os.path.join(val_dir, 'isnull'))\n",
     "    \n",
-    "with open('training data dic.txt') as f:\n",
+    "with open('./data/training data dic.txt') as f:\n",
     "    wordset = f.read().split('\\n')\n",
     "\n",
     "for word in wordset:\n",
