By label data preprocessing

--- a/Evaluation.ipynb
+++ b/Evaluation.ipynb
@@ -743,7 +743,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -792,7 +792,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {
     "scrolled": true
    },
@@ -802,7 +802,7 @@
      "output_type": "stream",
      "text": [
       "Image 1\n",
-      "Predict: 團, Label: 田, Time elapsed: 0.23475933074951172\n",
+      "Predict: 團, Label: 田, Time elapsed: 0.050362348556518555\n",
       "\n"
      ]
     },
@@ -823,7 +823,7 @@
      "output_type": "stream",
      "text": [
       "Image 2\n",
-      "Predict: 楊, Label: 千, Time elapsed: 0.03700399398803711\n",
+      "Predict: 楊, Label: 千, Time elapsed: 0.02360224723815918\n",
       "\n"
      ]
     },
@@ -844,7 +844,7 @@
      "output_type": "stream",
      "text": [
       "Image 3\n",
-      "Predict: 所, Label: 田, Time elapsed: 0.03825736045837402\n",
+      "Predict: 所, Label: 田, Time elapsed: 0.023458242416381836\n",
       "\n"
      ]
     },
@@ -865,7 +865,7 @@
      "output_type": "stream",
      "text": [
       "Image 4\n",
-      "Predict: 昇, Label: 昇, Time elapsed: 0.028599977493286133\n",
+      "Predict: 昇, Label: 昇, Time elapsed: 0.024558305740356445\n",
       "\n"
      ]
     },
@@ -886,7 +886,7 @@
      "output_type": "stream",
      "text": [
       "Image 5\n",
-      "Predict: isnull, Label: 主, Time elapsed: 0.02719283103942871\n",
+      "Predict: isnull, Label: 主, Time elapsed: 0.02356719970703125\n",
       "\n"
      ]
     },
@@ -906,7 +906,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Inference Time: 0.20637454986572265\n"
+      "Inference Time: 0.1598968505859375\n"
      ]
     }
    ],
@@ -932,6 +932,27 @@
     "time_elapsed = time.time() - since\n",
     "\n",
     "print(f'Inference Time: {time_elapsed / len(words)}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class_dict = {k: v for k, v in enumerate(class_names)}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pickle\n",
+    "\n",
+    "with open('idx2class.pickle', 'wb') as handle:\n",
+    "    pickle.dump(class_dict, handle)"
    ]
   },
   {
