--- a/Data Preprocessing.ipynb
+++ b/Data Preprocessing.ipynb
@@ -6,17 +6,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from collections import Counter\n",
+    "import re\n",
     "import os\n",
     "\n",
     "dataset_dir = './data/clean'  # Set the dataset directory\n",
     "train_dir = './data/train'\n",
     "val_dir = './data/val'\n",
     "\n",
+    "words = []\n",
     "words_path = []\n",
     "\n",
     "for root, dirs, files in os.walk(dataset_dir, topdown=True):\n",
     "    for name in files:\n",
-    "        words_path.append(os.path.join(root, name))"
+    "        words.append(re.split(r'_|\\.', name)[1])\n",
+    "        words_path.append(os.path.join(root, name))\n",
+    "\n",
+    "words_counter = Counter(words)"
    ]
   },
   {
@@ -30,7 +36,7 @@
     "if os.path.isdir(train_dir):\n",
     "    shutil.rmtree(train_dir)\n",
     "os.mkdir(train_dir)\n",
-    "    \n",
+    "\n",
     "if os.path.isdir(val_dir):\n",
     "    shutil.rmtree(val_dir)\n",
     "os.mkdir(val_dir)\n",
@@ -58,18 +64,22 @@
     "\n",
     "random.shuffle(words_path)\n",
     "\n",
-    "for i in range(len(words_path)):\n",
-    "    img = Image.open(words_path[i])\n",
-    "    if i < len(words_path) * 0.8:\n",
-    "        if words_path[i].split('_')[-1].split('.')[0] in wordset:\n",
-    "            img.save(os.path.join(train_dir, words_path[i].split('_')[-1].split('.')[0], words_path[i].split('/')[-1]))\n",
+    "pass_words = []\n",
+    "\n",
+    "for i, path in enumerate(words_path):\n",
+    "    img = Image.open(path)\n",
+    "    current_word = re.split('_|\\.', path)[-2]\n",
+    "    if Counter(pass_words)[current_word] < 0.8 * words_counter[current_word]:\n",
+    "        if current_word in wordset:\n",
+    "            img.save(os.path.join(train_dir, current_word, path.split('/')[-1]))\n",
     "        else:\n",
-    "            img.save(os.path.join(train_dir, 'isnull', words_path[i].split('/')[-1]))\n",
+    "            img.save(os.path.join(train_dir, 'isnull', path.split('/')[-1]))\n",
     "    else:\n",
-    "        if words_path[i].split('_')[-1].split('.')[0] in wordset:\n",
-    "            img.save(os.path.join(val_dir, words_path[i].split('_')[-1].split('.')[0], words_path[i].split('/')[-1]))\n",
+    "        if current_word in wordset:\n",
+    "            img.save(os.path.join(val_dir, current_word, path.split('/')[-1]))\n",
     "        else:\n",
-    "            img.save(os.path.join(val_dir, 'isnull', words_path[i].split('/')[-1]))"
+    "            img.save(os.path.join(val_dir, 'isnull', path.split('/')[-1]))\n",
+    "    pass_words.append(current_word)"
    ]
   },
   {
