modify and add file

--- a/Data Preprocessing.ipynb
+++ b/Data Preprocessing.ipynb
@@ -10,24 +10,40 @@
     "import re\n",
     "import os\n",
     "\n",
-    "dataset_dir = './data/clean'  # Set the dataset directory\n",
+    "dataset_dirs = ['./data/clean', './data/additional']  # Set the dataset directory\n",
     "train_dir = './data/train'\n",
     "val_dir = './data/val'\n",
     "\n",
     "words = []\n",
     "words_path = []\n",
     "\n",
-    "for root, dirs, files in os.walk(dataset_dir, topdown=True):\n",
-    "    for name in files:\n",
-    "        words.append(re.split(r'_|\\.', name)[1])\n",
-    "        words_path.append(os.path.join(root, name))\n",
-    "\n",
-    "words_counter = Counter(words)"
+    "for dataset_dir in dataset_dirs:\n",
+    "    for root, dirs, files in os.walk(dataset_dir, topdown=True):\n",
+    "        for name in files:\n",
+    "            words.append(re.split(r'_|\\.', name)[1])\n",
+    "            words_path.append(os.path.join(root, name))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "words_counter = [['isnull', 0]]\n",
+    "\n",
+    "for (key, count) in Counter(words).items():\n",
+    "    if count >= 40:\n",
+    "        words_counter.append([key, count])\n",
+    "    else:\n",
+    "        words_counter[0][1] += count\n",
+    "\n",
+    "words_counter = dict(words_counter)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,21 +56,18 @@
     "if os.path.isdir(val_dir):\n",
     "    shutil.rmtree(val_dir)\n",
     "os.mkdir(val_dir)\n",
-    "    \n",
-    "os.mkdir(os.path.join(train_dir, 'isnull'))\n",
-    "os.mkdir(os.path.join(val_dir, 'isnull'))\n",
-    "    \n",
-    "with open('./data/training data dic.txt') as f:\n",
-    "    wordset = f.read().split('\\n')\n",
     "\n",
-    "for word in wordset:\n",
-    "    os.mkdir(os.path.join(train_dir, word))\n",
-    "    os.mkdir(os.path.join(val_dir, word))"
+    "wordset = set()\n",
+    "for key in words_counter:\n",
+    "    if key != 'isnull':\n",
+    "        wordset.add(key)\n",
+    "    os.mkdir(os.path.join(train_dir, key))\n",
+    "    os.mkdir(os.path.join(val_dir, key))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,16 +82,12 @@
     "for i, path in enumerate(words_path):\n",
     "    img = Image.open(path)\n",
     "    current_word = re.split('_|\\.', path)[-2]\n",
+    "    if not current_word in wordset:\n",
+    "        current_word = 'isnull'\n",
     "    if Counter(pass_words)[current_word] < 0.8 * words_counter[current_word]:\n",
-    "        if current_word in wordset:\n",
-    "            img.save(os.path.join(train_dir, current_word, path.split('/')[-1]))\n",
-    "        else:\n",
-    "            img.save(os.path.join(train_dir, 'isnull', path.split('/')[-1]))\n",
+    "        img.save(os.path.join(train_dir, current_word, path.split('/')[-1]))\n",
     "    else:\n",
-    "        if current_word in wordset:\n",
-    "            img.save(os.path.join(val_dir, current_word, path.split('/')[-1]))\n",
-    "        else:\n",
-    "            img.save(os.path.join(val_dir, 'isnull', path.split('/')[-1]))\n",
+    "        img.save(os.path.join(val_dir, current_word, path.split('/')[-1]))\n",
     "    pass_words.append(current_word)"
    ]
   },
