Update all files

--- a/Data Preprocessing.ipynb
+++ b/Data Preprocessing.ipynb
@@ -2,31 +2,38 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "from collections import Counter\n",
     "import os\n",
+    "import random\n",
+    "import re\n",
+    "import shutil\n",
+    "\n",
+    "from PIL import Image\n",
+    "\n",
     "\n",
     "dataset_dir = './data/clean'  # Set the dataset directory\n",
     "train_dir = './data/train'\n",
     "val_dir = './data/val'\n",
     "\n",
+    "words = []\n",
     "words_path = []\n",
     "\n",
     "for root, dirs, files in os.walk(dataset_dir, topdown=True):\n",
     "    for name in files:\n",
+    "        words.append(re.split(r'_|\\.', name)[1])\n",
     "        words_path.append(os.path.join(root, name))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import shutil\n",
-    "\n",
     "if os.path.isdir(train_dir):\n",
     "    shutil.rmtree(train_dir)\n",
     "os.mkdir(train_dir)\n",
@@ -38,7 +45,7 @@
     "os.mkdir(os.path.join(train_dir, 'isnull'))\n",
     "os.mkdir(os.path.join(val_dir, 'isnull'))\n",
     "    \n",
-    "with open('training data dic.txt') as f:\n",
+    "with open('./data/training data dic.txt') as f:\n",
     "    wordset = f.read().split('\\n')\n",
     "\n",
     "for word in wordset:\n",
@@ -48,28 +55,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import random\n",
+    "words_counter = [['isnull', 0]]\n",
     "\n",
-    "from PIL import Image\n",
+    "for (key, count) in Counter(words).items():\n",
+    "    if key in wordset:\n",
+    "        words_counter.append([key, count])\n",
+    "    else:\n",
+    "        words_counter[0][1] += count\n",
     "\n",
+    "words_counter = dict(words_counter)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "random.shuffle(words_path)\n",
     "\n",
-    "for i in range(len(words_path)):\n",
-    "    img = Image.open(words_path[i])\n",
-    "    if i < len(words_path) * 0.8:\n",
-    "        if words_path[i].split('_')[-1].split('.')[0] in wordset:\n",
-    "            img.save(os.path.join(train_dir, words_path[i].split('_')[-1].split('.')[0], words_path[i].split('/')[-1]))\n",
-    "        else:\n",
-    "            img.save(os.path.join(train_dir, 'isnull', words_path[i].split('/')[-1]))\n",
+    "pass_words = []\n",
+    "\n",
+    "for i, path in enumerate(words_path):\n",
+    "    img = Image.open(path)\n",
+    "    current_word = re.split('_|\\.', path)[-2]\n",
+    "    if not current_word in wordset:\n",
+    "        current_word = 'isnull'\n",
+    "    if Counter(pass_words)[current_word] < 0.8 * words_counter[current_word]:\n",
+    "        img.save(os.path.join(train_dir, current_word, path.split('/')[-1]))\n",
     "    else:\n",
-    "        if words_path[i].split('_')[-1].split('.')[0] in wordset:\n",
-    "            img.save(os.path.join(val_dir, words_path[i].split('_')[-1].split('.')[0], words_path[i].split('/')[-1]))\n",
-    "        else:\n",
-    "            img.save(os.path.join(val_dir, 'isnull', words_path[i].split('/')[-1]))"
+    "        img.save(os.path.join(val_dir, current_word, path.split('/')[-1]))\n",
+    "    pass_words.append(current_word)"
    ]
   },
   {
