evaluatied notebook support many weights as once

--- a/notebooks/evaluated by threshold.ipynb
+++ b/notebooks/evaluated by threshold.ipynb
@@ -26,17 +26,32 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "batch_size = 32\n",
+    "# Setting\n",
+    "batch_size = 16\n",
     "device = torch.device(\"cuda:0\" if torch.cuda.is_available() else \"cpu\")\n",
-    "input_size = 224\n",
-    "model_path = '../models/efficientnet-b3.pth'\n",
-    "test_dir = '../data/test v2'\n",
-    "class_dict_path = '../data/training data dic.txt'"
+    "\n",
+    "models_dir = '../models'\n",
+    "\n",
+    "input_sizes = [67, ]\n",
+    "load_model_paths = ['Preprocessed v1 EfficientNet-B3 v1.pth', ]\n",
+    "\n",
+    "model_name = 'efficientnet-b3'  # Backbone model\n",
+    "test_dir = '../data/preprocessed_test_0615'  # path to test\n",
+    "class_dict_path = '../data/training data dic.txt'  # path to 玉山給的 training data dict.txt"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# opt = Options().parse()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,155 +61,154 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_transform = transforms.Compose([\n",
-    "    transforms.Resize((input_size, input_size)),\n",
-    "    transforms.ToTensor(),\n",
-    "    transforms.Normalize([0.726, 0.686, 0.695], [0.205, 0.210, 0.183])\n",
-    "])\n",
+    "dataloaders = []\n",
     "\n",
-    "image_dataset = datasets.ImageFolder(test_dir, data_transform)\n",
-    "dataloader = torch.utils.data.DataLoader(image_dataset,\n",
-    "                                         batch_size=batch_size,\n",
-    "                                         shuffle=True,\n",
-    "                                         num_workers=6) \n",
+    "for size in input_sizes:\n",
+    "    data_transform = transforms.Compose([\n",
+    "        transforms.Resize((size, size)),\n",
+    "        transforms.ToTensor(),\n",
+    "        transforms.Normalize([0.726, 0.686, 0.695], [0.205, 0.210, 0.183])\n",
+    "    ])\n",
     "\n",
-    "dataset_sizes = len(image_dataset)\n",
+    "    image_dataset = datasets.ImageFolder(test_dir, data_transform)\n",
+    "    \n",
+    "    dataloaders.append(torch.utils.data.DataLoader(image_dataset,\n",
+    "                                                   batch_size=batch_size,\n",
+    "                                                   shuffle=False,\n",
+    "                                                   num_workers=6))\n",
     "\n",
-    "class_names = image_dataset.classes"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Loaded pretrained weights for efficientnet-b3\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "model_test = EfficientNet.from_pretrained('efficientnet-b3', num_classes=len(class_names))\n",
+    "dataset_sizes = len(dataloaders[0].dataset)\n",
     "\n",
-    "model_test.to(device)\n",
-    "\n",
-    "model_test.load_state_dict(torch.load(model_path))\n",
-    "\n",
-    "model_test.eval()\n",
-    "print()"
+    "class_names = dataloaders[0].dataset.classes"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "max_probs_list = []\n",
-    "preds_list = []\n",
-    "labels_list = []\n",
-    "\n",
-    "with torch.no_grad():\n",
-    "    for inputs, labels in dataloader:\n",
-    "        inputs = inputs.to(device)\n",
-    "        labels = labels.to(device)\n",
-    "\n",
-    "        outputs = model_test(inputs)\n",
-    "        softmax = nn.Softmax(dim=1)\n",
-    "        max_prods, preds = torch.max(softmax(outputs), 1)\n",
-    "        max_probs_list += max_prods.cpu().tolist()\n",
-    "        preds_list += preds.cpu().tolist()\n",
-    "        labels_list += labels.cpu().tolist()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Threshold = 0\n",
-      "isnull f1 score: 0.45161290322580644\n",
-      "Macro f1 score: 0.8514539504441327\n",
-      "Weighted f1 score: 0.8693028824432998\n",
-      "Accuracy: 0.8529411764705882\n",
-      "\n",
-      "Threshold = 0.3\n",
-      "isnull f1 score: 0.464\n",
-      "Macro f1 score: 0.8539651162790698\n",
-      "Weighted f1 score: 0.8718011204481794\n",
-      "Accuracy: 0.8550420168067226\n",
-      "\n",
-      "Threshold = 0.5\n",
-      "isnull f1 score: 0.5230769230769231\n",
-      "Macro f1 score: 0.8651659125188537\n",
-      "Weighted f1 score: 0.8844160741219566\n",
-      "Accuracy: 0.865546218487395\n",
-      "\n",
-      "Threshold = 0.7\n",
-      "isnull f1 score: 0.6433566433566433\n",
-      "Macro f1 score: 0.8835125073931044\n",
-      "Weighted f1 score: 0.912665765606942\n",
-      "Accuracy: 0.8907563025210085\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "threshold = [0, 0.3, 0.5, 0.7]\n",
-    "\n",
-    "isnull_f1 = []\n",
-    "macro_f1 = []\n",
-    "weighted_f1 = []\n",
-    "accuracy = []\n",
-    "\n",
-    "for i, t in enumerate(threshold):\n",
-    "    preds = np.copy(preds_list)\n",
-    "    labels = np.copy(labels_list)\n",
-    "    max_probs = np.copy(max_probs_list)\n",
-    "    preds[max_probs < t] = 0\n",
-    "    isnull_f1.append(f1_score(labels, preds, labels=[0], average=\"macro\"))\n",
-    "    macro_f1.append(f1_score(labels, preds, average=\"macro\"))\n",
-    "    weighted_f1.append(f1_score(labels, preds, average=\"weighted\"))\n",
-    "    accuracy.append(accuracy_score(labels, preds))\n",
-    "    print(f'Threshold = {t}')\n",
-    "    print(f'isnull f1 score: {isnull_f1[i]}')\n",
-    "    print(f'Macro f1 score: {macro_f1[i]}')\n",
-    "    print(f'Weighted f1 score: {weighted_f1[i]}')\n",
-    "    print(f'Accuracy: {accuracy[i]}')\n",
-    "    print()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0.45161290322580644, 0.464, 0.5230769230769231, 0.6433566433566433, 0.8514539504441327, 0.8539651162790698, 0.8651659125188537, 0.8835125073931044, 0.8693028824432998, 0.8718011204481794, 0.8844160741219566, 0.912665765606942, 0.8529411764705882, 0.8550420168067226, 0.865546218487395, 0.8907563025210085]\n"
+      "Loaded pretrained weights for efficientnet-b3\n"
      ]
     }
    ],
    "source": [
-    "print(isnull_f1 + macro_f1 + weighted_f1 + accuracy)"
+    "models = []\n",
+    "\n",
+    "for path in load_model_paths:\n",
+    "    model = EfficientNet.from_pretrained(model_name, num_classes=len(class_names))\n",
+    "    model.to(device)\n",
+    "    model.load_state_dict(torch.load(os.path.join(models_dir, path)))\n",
+    "    model.eval()\n",
+    "    models.append(model)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# model_test = EfficientNet.from_pretrained(model_name, num_classes=len(class_names))\n",
+    "\n",
+    "# model_test.to(device)\n",
+    "\n",
+    "# model_test.load_state_dict(torch.load(model_path))\n",
+    "\n",
+    "# model_test.eval()\n",
+    "# print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "with torch.no_grad():\n",
+    "    model_max_probs = []\n",
+    "    model_preds = []\n",
+    "    model_labels = []\n",
+    "    for dataloader, model in zip(dataloaders, models):\n",
+    "        max_probs = []\n",
+    "        preds = []\n",
+    "        labels = []\n",
+    "        for batch_inputs, batch_labels in dataloader:\n",
+    "            batch_inputs = batch_inputs.to(device)\n",
+    "            batch_labels = batch_labels.to(device)\n",
+    "\n",
+    "            batch_outputs = model(batch_inputs)\n",
+    "            softmax = nn.Softmax(dim=1)\n",
+    "            batch_max_prods, batch_preds = torch.max(softmax(batch_outputs), 1)\n",
+    "            max_probs += batch_max_prods.cpu().tolist()\n",
+    "            preds += batch_preds.cpu().tolist()\n",
+    "            labels += batch_labels.cpu().tolist()\n",
+    "        model_max_probs.append(max_probs)\n",
+    "        model_preds.append(preds)\n",
+    "        model_labels.append(labels)\n",
+    "\n",
+    "model_max_probs = np.array(model_max_probs)\n",
+    "model_preds = np.array(model_preds)\n",
+    "model_labels = np.array(model_labels)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "threshold = [0, 0.3, 0.5, 0.7]\n",
+    "model_scores = []\n",
+    "\n",
+    "for max_probs, preds, labels in zip(model_max_probs, model_preds, model_labels):\n",
+    "    scores = {t: {'isnull_f1': 0, 'macro_f1': 0, 'weighted_f1': 0, 'accuracy': 0} for t in threshold}\n",
+    "    for t in threshold:\n",
+    "        preds[max_probs < t] = 0\n",
+    "        scores[t]['isnull_f1'] = f1_score(labels, preds, labels=[0], average=\"macro\")\n",
+    "        scores[t]['macro_f1'] = f1_score(labels, preds, average=\"macro\")\n",
+    "        scores[t]['weighted_f1'] = f1_score(labels, preds, average=\"weighted\")\n",
+    "        scores[t]['accuracy'] = accuracy_score(labels, preds)\n",
+    "    model_scores.append(scores)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rows = []\n",
+    "\n",
+    "for path, scores in zip(load_model_paths, model_scores):\n",
+    "    row = []\n",
+    "    for metric in ['isnull_f1', 'macro_f1', 'weighted_f1', 'accuracy']:\n",
+    "        for t in threshold:\n",
+    "            row.append(scores[t][metric])\n",
+    "    rows.append(row)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd \n",
+    "\n",
+    "df = pd.DataFrame(rows)\n",
+    "df.to_csv('../output/evaluation.csv', encoding='utf-8')"
    ]
   },
   {
@@ -221,7 +235,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.13"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
